--- a/Supplemental/create_prediction_equations3.Rmd
+++ b/Supplemental/create_prediction_equations3.Rmd
@@ -3,231 +3,45 @@ Loads essentials. Run create_btc_prediction_data.Rmd to update bitcoin_history.R
 ```{r}
 setwd("~/Desktop/Crypto_Analysis-master/Supplemental")
 source("custom_functions.R")
-load("bitcoin_downtrend_history.RDA")  # named df
-df$order = seq(1,nrow(df))
+load("bitcoin_downtrend_history2.RDA")  # named df
 ```
 
 Predict when downtrend will end
 ```{r}
+library(caret)
+
+data = df %>% select(days.ath.atl, pct.ooath.ooatl , pct.ooatl.oath,  pct.oath.oatl , pct.oatl.ath  
+,pct.ooath.oath  ,    pct.oath.ath  ,  pct.ooatl.oatl  ,  days.ooath.ooatl   
+, days.ooatl.oath , days.oath.oatl  , days.oatl.ath  ,  days.ooath.oath    
+,days.oath.ath , days.ooatl.oatl  ,reg.ooath.ooatl ,reg.ooatl.oath , reg.oath.oatl      
+,reg.oatl.ath  ,reg.ooath.oath ,reg.oath.ath, reg.ooatl.oatl     
+,bad.months  ,reg.ath.atl,ath.bull ,order) %>% na.omit()
 
 
-fit.all = lm(log.days.ath.atl ~  log.pct.ooath.ooatl   +  log.pct.ooatl.oath    +  log.pct.oath.oatl    +   log.pct.oatl.ath  
-+log.pct.ooath.oath  +    log.pct.oath.ath    +    log.pct.ooatl.oatl  +    log.days.ooath.ooatl   
-+ log.days.ooatl.oath +    log.days.oath.oatl  +    log.days.oatl.ath   +    log.days.ooath.oath    
-+log.days.oath.ath     +  log.days.ooatl.oatl     +log.reg.ooath.ooatl    + log.reg.ooatl.oath     + log.reg.oath.oatl      
-+log.reg.oatl.ath       + log.reg.ooath.oath     + log.reg.oath.ath       + log.reg.ooatl.oatl     
-+bad.months             + log.reg.ath.atl + ath.bull + order,df   )
-
-library(kernlab)
-
-train = sample(3:48,42,replace=FALSE)
-
-# gp = gausspr(days.ath.atl ~  log.pct.ooath.ooatl   +  log.pct.ooatl.oath    +  log.pct.oath.oatl    +   log.pct.oatl.ath  
-# +log.pct.ooath.oath  +    log.pct.oath.ath    +    log.pct.ooatl.oatl  +    log.days.ooath.ooatl   
-# + log.days.ooatl.oath +    log.days.oath.oatl  +    log.days.oatl.ath   +    log.days.ooath.oath    
-# +log.days.oath.ath     +  log.days.ooatl.oatl     +log.reg.ooath.ooatl    + log.reg.ooatl.oath     + log.reg.oath.oatl      
-# +log.reg.oatl.ath       + log.reg.ooath.oath     + log.reg.oath.ath       + log.reg.ooatl.oatl     
-# +bad.months             + log.reg.ath.atl + ath.bull, data=df[train,],var=0.1,variance.model=TRUE)
+# data2 = df %>% select(days.ath.atl, log.pct.ooath.ooatl , log.pct.ooatl.oath ,log.pct.oath.oatl  , log.pct.oatl.ath ,log.pct.ooath.oath , log.pct.oath.ath , log.pct.ooatl.oatl, log.days.ooath.ooatl   
+# ,log.days.ooatl.oath, log.days.oath.oatl  ,  log.days.oatl.ath  , log.days.ooath.oath    
+# ,log.days.oath.ath  , log.days.ooatl.oatl  ,log.reg.ooath.ooatl , log.reg.ooatl.oath ,log.reg.oath.oatl      ,log.reg.oatl.ath ,log.reg.ooath.oath , log.reg.oath.ath  ,log.reg.ooatl.oatl     
+# ,bad.months    ,log.reg.ath.atl , ath.bull, order) %>% na.omit()
 
 
-observed = df$log.days.ath.atl[c(-1,-2,-train)]
-predicted = predict(d.fit9,df[c(-1,-2,-train),])
+algorithms = data.frame(model = c("CART",
+	"MARS","Bagged CART","Bagged MARS","Random Forest","Random Forest 2","Boosted Tree","Extreme Gradient Boost 1"),
+	code =  c("rpart","earth","treebag","bagEarth","rf","ranger","bstTree","xgbLinear"))
 
+model=list()
+for(i in 1:nrow(algorithms)){
+model[[i]] <- train(days.ath.atl~., data=data, method=algorithms$code[i])
+}
+names(model) = algorithms$model
 
-df.predicted.diff.lmer <- data.frame(observed = observed, fit = predicted) %>%
-		mutate(diff = fit-observed)
+ results=resamples(model)$values %>% select(contains("MAE"))
+ colnames(results) = algorithms$model
+ mae = results %>% gather(model,MAE) %>% group_by(model) %>%
+  	summarize(MAE_mean = mean(MAE), MAE_sd = sd(MAE)) %>% arrange(MAE_mean) 
 
-ggplot(df.predicted.diff.lmer, aes(x = fit, y = diff)) +
-    geom_point(size = 3,color="blue",alpha=0.7) +
-	geom_hline(aes(yintercept=0),color="springgreen4",linetype="dashed") +
-	geom_hline(aes(yintercept=0),color="springgreen3",alpha=0.25,size=1) +
-    #geom_errorbar(aes(ymax = diff.U, ymin = diff.L),color="red",alpha=0.5, width=0.2) +
-	scale_x_continuous(name="Predicted Number of Days Downtrend Will Last", breaks=seq(0,100,5)) +
-	scale_y_continuous(name="Difference in Days Between Prediction and Actual Downtrend Duration (Prediction - Actual)",breaks=seq(-100,100,5))+
-    theme_economist() + scale_colour_economist() +
-	ggtitle("Error of Mixed Model Predicting BTC Downtrend Duration") 
-
-# for no reg.ath.atl, logs
-#pairs(log.df2[c(1:10,33)],lower.panel=panel.smooth, upper.panel=panel.cor,diag.panel=panel.hist,cex.labels=1)
-#pairs(log.df2[which(colnames(log.df2) %in% c("log.pct.oath.oatl", "log.pct.oatl.ath", "log.pct.oath.ath", "log.days.ooatl.oath", "log.pct.day.oath.ath", "ath.bull","atl.bull", "log.reg.ath.atl","log.days.ath.atl"))    ],lower.panel=panel.smooth, upper.panel=panel.cor,diag.panel=panel.hist,cex.labels=1) 
-  
-# with no log.reg.ath.atl
-#d.fit1 = lm(log.days.ath.atl ~ log.pct.oath.oatl + log.pct.oath.ath , df)
-d.fit1 = lm(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.oath.ath + log.days.ooath.ooatl + 
-    log.days.ooatl.oath + log.days.oath.oatl + log.days.oatl.ath + 
-    log.days.ooath.oath + log.days.oath.ath + log.reg.oath.oatl + 
-    bad.months,df)
-d.fit2 = lm(log.days.ath.atl ~ log.pct.oatl.ath + log.days.ooath.ooatl + 
-    log.days.ooatl.oath + log.days.oath.oatl + log.days.ooath.oath + 
-    log.reg.oath.oatl + log.reg.oath.ath + bad.months,df)
-
-# with log.reg.ath.atl
-
-d.fit3 = lm(log.days.ath.atl ~ log.pct.ooath.oath + log.pct.oath.ath + 
-     log.reg.ooatl.oath + 
-    ath.bull + log.reg.ath.atl + log.pct.ooatl.oatl,df)
-
-
-d.fit4 = lm(log.days.ath.atl ~ log.pct.ooatl.oath + log.pct.oatl.ath + log.pct.ooath.oath + 
-    log.pct.oath.ath + log.pct.ooatl.oatl + log.days.ooatl.oath + 
-    log.days.oath.oatl + log.days.oatl.ath + log.days.oath.ath + 
-    log.reg.ooatl.oath + log.reg.oatl.ath + ath.bull + log.reg.ath.atl,df)
-
-d.fit5 = lm(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.ooath.oath + 
-    log.pct.oath.ath + log.pct.ooatl.oatl +
-    log.days.oath.oatl + log.days.oatl.ath + log.days.oath.ath + 
-    log.reg.ooatl.oath + log.reg.oatl.ath + ath.bull + log.reg.ath.atl + I(log.reg.ath.atl^2) + I(log.reg.ath.atl^3) ,df)
-
-
-d.fit6 = lm(log.days.ath.atl ~ log.pct.oatl.ath +  log.pct.ooath.oath  +
-    log.days.oatl.ath +log.pct.oath.ath  + log.pct.ooatl.oatl +
-    log.reg.ooatl.oath + log.reg.oatl.ath +I(log.reg.oatl.ath^2) + ath.bull + log.reg.ath.atl + I(log.reg.ath.atl^2) + log.reg.ath.atl*ath.bull,df)
-
-
-d.fit7 = lm(log.days.ath.atl ~ log.pct.oatl.ath +  log.pct.ooath.oath  +
-   log.pct.oath.ath  + log.pct.ooatl.oatl +
-    log.reg.ooatl.oath + log.reg.oatl.ath+I(log.reg.oatl.ath^2)  + ath.bull + log.reg.ath.atl + I(log.reg.ath.atl^2),df)
-
-
-d.fit8 = lm(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.ooath.oath + 
-    ath.bull + log.reg.ath.atl + I(log.pct.oatl.ath^3) + 
-    I(log.pct.ooath.oath^3) + I(log.pct.oath.ath^3) + I(log.pct.ooatl.oatl^3) + 
-    I(log.days.oath.oatl^3) + I(log.reg.ooatl.oath^3) + 
-    I(log.reg.oatl.ath^3) + I(log.reg.ath.atl^3),df)
-
-d.fit9 = lm(log.days.ath.atl ~ log.pct.ooatl.oath + log.pct.oatl.ath + log.pct.ooath.oath + 
-    log.pct.oath.ath + log.pct.ooatl.oatl + log.days.ooatl.oath + 
-    log.days.oath.oatl + log.days.oatl.ath + log.days.oath.ath + 
-    log.reg.ooatl.oath + log.reg.oatl.ath + log.reg.ath.atl + 
-    ath.bull + order,df)
-
-d.fit1.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.oath.ath + log.days.ooath.ooatl + 
-    log.days.ooatl.oath + log.days.oath.oatl + log.days.oatl.ath + 
-    log.days.ooath.oath + log.days.oath.ath + log.reg.oath.oatl + 
-    bad.months + (1|ath.bull),df)
-d.fit2.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath + log.days.ooath.ooatl + 
-    log.days.ooatl.oath + log.days.oath.oatl + log.days.ooath.oath + 
-    log.reg.oath.oatl + log.reg.oath.ath + bad.months + (1|ath.bull),df)
-
-# with log.reg.ath.atl
-
-d.fit3.lmer = lmer(log.days.ath.atl ~ log.pct.ooath.oath + log.pct.oath.ath + 
-     log.reg.ooatl.oath + 
-    log.reg.ath.atl + log.pct.ooatl.oatl + (1|ath.bull),df)
-
-
-d.fit4.lmer = lmer(log.days.ath.atl ~ log.pct.ooatl.oath + log.pct.oatl.ath + log.pct.ooath.oath + 
-    log.pct.oath.ath + log.pct.ooatl.oatl + log.days.ooatl.oath + 
-    log.days.oath.oatl + log.days.oatl.ath + log.days.oath.ath + 
-    log.reg.ooatl.oath + log.reg.oatl.ath + log.reg.ath.atl + (1|ath.bull),df)
-
-d.fit5.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.ooath.oath + 
-    log.pct.oath.ath + log.pct.ooatl.oatl +
-    log.days.oath.oatl + log.days.oatl.ath + log.days.oath.ath + 
-    log.reg.ooatl.oath + log.reg.oatl.ath + log.reg.ath.atl + I(log.reg.ath.atl^2) + I(log.reg.ath.atl^3) + (1|ath.bull),df)
-
-
-d.fit6.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath +  log.pct.ooath.oath  +
-    log.days.oatl.ath +log.pct.oath.ath  + log.pct.ooatl.oatl +
-    log.reg.ooatl.oath + log.reg.oatl.ath +I(log.reg.oatl.ath^2) +  log.reg.ath.atl + I(log.reg.ath.atl^2) + log.reg.ath.atl*ath.bull
-	+ (1|ath.bull),df)
-
-d.fit7.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath +  log.pct.ooath.oath  +
-   log.pct.oath.ath  + log.pct.ooatl.oatl +
-    log.reg.ooatl.oath + log.reg.oatl.ath + I(log.reg.oatl.ath^2)  +  log.reg.ath.atl + I(log.reg.ath.atl^2) + 
-		(1|ath.bull),df)
-
-
-d.fit8.lmer = lmer(log.days.ath.atl ~ log.pct.oatl.ath + log.pct.ooath.oath + 
-     log.reg.ath.atl + I(log.pct.oatl.ath^3) + 
-    I(log.pct.ooath.oath^3) + I(log.pct.oath.ath^3) + I(log.pct.ooatl.oatl^3) + 
-    I(log.days.oath.oatl^3) + I(log.reg.ooatl.oath^3) + 
-    I(log.reg.oatl.ath^3) + I(log.reg.ath.atl^3) + (1|ath.bull),df)
-
-
-step_fit <- stepAIC(fit.all, direction="both")
-step_fit$anova
-
-# Compare models
-# stats1 = as.data.frame(ldply(list(d.fit1,d.fit2,d.fit3,d.fit4,d.fit5,d.fit6,d.fit7,d.fit8), model_fit_stats)[,2:3])
-# stats1
-
-# stats2.function = function(model){
-# df.predicted.diff = cbind(data.frame(observed = df$days.ath.atl),as.data.frame(exp(predict(model, df, se.fit=T, type='response',interval = "conf",level=0.95)$fit))) %>% arrange(fit)  %>%
-# 	mutate(diff = fit-observed,abs_diff = abs(diff)) %>% 
-# 	summarize(RMSE= sqrt(mean((abs_diff^2),na.rm=TRUE)),
-# 		mean_error = mean(abs_diff,na.rm=TRUE),
-# 		median_error = median(abs_diff,na.rm=TRUE)
-# 		)
-# return(df.predicted.diff)
-# }
-# 
-# stats2 = as.data.frame(matrix(nrow = 9, ncol = 3))
-# colnames(stats2) = c("RMSE","mean_error","median_error")
-# stats2[1,] = stats2.function(model=d.fit1)
-# stats2[2,] = stats2.function(model=d.fit2)
-# stats2[3,] = stats2.function(model=d.fit3)
-# stats2[4,] = stats2.function(model=d.fit4)
-# stats2[5,] = stats2.function(model=d.fit5)
-# stats2[6,] = stats2.function(model=d.fit6)
-# stats2[7,] = stats2.function(model=d.fit7)
-# stats2[8,] = stats2.function(model=d.fit8)
-# #stats2[9,] = stats2.function(model=d.fit9)
-# d.stats.model = cbind(stats1,stats2)
-
-
-# comparing predicted to actual difference
-# df.predicted.diff = cbind(data.frame(observed = df$days.ath.atl),as.data.frame(exp(predict(d.fit10, df, se.fit=T, type='response',interval = "conf",level=0.95,allow.new.levels=TRUE)$fit))) %>% arrange(fit)  %>%
-# 	mutate(diff = fit-observed, diff.L = lwr - observed, diff.U = upr - observed, abs_diff = abs(diff))
-
-# df.predicted.diff = data.frame(observed = df$days.ath.atl,predicted = exp(predict(d.fit7, df, se.fit=T, type='response',interval = "conf",level=0.95,allow.new.levels=TRUE))) %>%
-# 	mutate(diff = predicted-observed, diff.L = lwr - observed, diff.U = upr - observed, abs_diff = abs(diff))
-
-df.predicted.diff.lmer <- data.frame(observed=df$days.ath.atl, exp(predictInterval(d.fit6, newdata = df, n.sims = 1000))) %>%
-		mutate(diff = fit-observed, diff.L = lwr - observed, diff.U = upr - observed, abs_diff = abs(diff))
-	
-
-ggplot(df.predicted.diff.lmer, aes(x = fit, y = diff)) +
-    geom_point(size = 3,color="blue",alpha=0.7) +
-	geom_hline(aes(yintercept=0),color="springgreen4",linetype="dashed") +
-	geom_hline(aes(yintercept=0),color="springgreen3",alpha=0.25,size=1) +
-    geom_errorbar(aes(ymax = diff.U, ymin = diff.L),color="red",alpha=0.5, width=0.2) +
-	scale_x_continuous(name="Predicted Number of Days Downtrend Will Last", breaks=seq(0,100,5)) +
-	scale_y_continuous(name="Difference in Days Between Prediction and Actual Downtrend Duration (Prediction - Actual)",breaks=seq(-100,100,5))+
-    theme_economist() + scale_colour_economist() +
-	ggtitle("Error of Mixed Model Predicting BTC Downtrend Duration") 
-	
-
-# See errors better
-ggplot(df.predicted.diff, aes(x = fit, y = abs_diff)) +
-    geom_point(size = 3,color="blue",alpha=0.7) +
-	stat_smooth(geom = 'area', method = 'loess', span = .4 ,alpha = 1/2, fill = "lightblue4") + 
-	geom_hline(aes(yintercept=0),color="green4",linetype="dashed",size=1.2,alpha=0.75) +
-	geom_hline(aes(yintercept=5),color="springgreen3",linetype="dashed",size=1.2,alpha=0.75) +
-	geom_hline(aes(yintercept=10),color="indianred2",linetype="dashed",size=1.2,alpha=0.75) +
-	scale_x_continuous(name="Predicted Number of Days Downtrend Will Last", breaks=seq(0,100,5))+
-	scale_y_continuous(name="Difference in Days Between Prediction and Actual Downtrend",breaks=seq(-100,100,5))+
-    theme_economist() + scale_colour_economist() +
-	ggtitle("Error of Linear Model Predicting BTC Downtrend Duration")
-
-
-save(d.fit1,file="models/d.fit1.Rda")
-save(d.fit2,file="models/d.fit2.Rda")
-save(d.fit3,file="models/d.fit3.Rda")
-save(d.fit4,file="models/d.fit4.Rda")
-save(d.fit5,file="models/d.fit5.Rda")
-save(d.fit6,file="models/d.fit6.Rda")
-save(d.fit7,file="models/d.fit7.Rda")
-save(d.fit8,file="models/d.fit8.Rda")
-save(d.fit1.lmer,file="models/d.fit1.lmer.Rda")
-save(d.fit2.lmer,file="models/d.fit2.lmer.Rda")
-save(d.fit3.lmer,file="models/d.fit3.lmer.Rda")
-save(d.fit4.lmer,file="models/d.fit4.lmer.Rda")
-save(d.fit5.lmer,file="models/d.fit5.lmer.Rda")
-save(d.fit6.lmer,file="models/d.fit6.lmer.Rda")
-save(d.fit7.lmer,file="models/d.fit7.lmer.Rda")
-save(d.fit8.lmer,file="models/d.fit8.lmer.Rda")
-save(d.fit9,file="models/d.fit9.Rda")
+ 
+ d.fit.ml = model
+save(d.fit.ml,file="models/d.fit.ml.Rda")
 #save(d.fit10,file="models/d.fit10.Rda")
 #save(d.stats.model,file="models/d.stats.model.Rda")
 ```
