--- a/Bitcoin_Trend.Rmd
+++ b/Bitcoin_Trend.Rmd
@@ -9,6 +9,7 @@ library(cowplot)
 ```
 
 
+all bear markets comparison
 ```{r}
 btc.df1 = btc.df %>% filter(date >= as.Date("2011-06-08") & date <= as.Date("2013-02-22")) %>%
 	mutate(time = "June 08, 2011 - Feb 22, 2013")
@@ -38,10 +39,9 @@ ggplot(all, aes(x=x,y=change,color=time)) +
 ```
 
 
-```{r}
-#library(plotly)
-#btc.df$days = seq(1:nrow(btc.df))
 
+bitcoin log scale
+```{r}
 btc.df2 = btc.df %>% filter(!(date >= as.Date("2011-02-22") & date <= as.Date("2011-8-22"))) %>%
 	filter(!(date >= as.Date("2013-01-28") & date <= as.Date("2015-01-04"))) %>%
 	filter(!(date >= as.Date("2017-05-07") & date <= as.Date("2018-11-26")))
@@ -55,23 +55,94 @@ ggplot(btc.df, aes(date,price))+
 	background_grid(major = "xy", minor = "none")+
 	stat_smooth(data = btc.df2, method="loess",span=0.99,color="lightblue")+
 	scale_x_date(breaks=pretty(btc.df$date,n=10), labels=date_format("%Y"))+
-	#geom_vline(xintercept = c(as.numeric(as.Date("2021-01-01")),as.numeric(as.Date("2022-01-01"))), color="grey90")
 	xlab("")
-
-#ggplotly(a,tooltip = c("date","price"))
 
 ```
 
 
-compare to gold
+compare to gold overlay all
+```{r}
+library(readxl)
+gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date)) %>% filter(date >= as.Date("1974-01-01")) %>% mutate(item="Gold") %>%
+	mutate(x=date-as.Date("1974-01-02"), x= as.numeric(x), pct = (price-116.5)/116.5)
+
+sequence = seq(1,max(gold$x),17.2)
+gold2 = data.frame(x=rep(NA,length(sequence)),pct=rep(NA,length(sequence)))
+for (i in 1:length(sequence)){
+row = 	which.min(abs(gold$x-sequence[i]))
+gold2$x[i] = gold$x[row]
+gold2$pct[i] = gold$pct[row]
+}
+gold2$item = "Gold"
+gold2$x = seq((134- which.max(gold2$pct[1:500])+3),nrow(gold2)+(134- which.max(gold2$pct[1:500])-1)+3)
+gold2$pct = gold2$pct -0.8
+
+btc2 = btc.df %>% filter(date >= as.Date("2017-08-05")) %>% 
+	mutate(item="Bitcoin")
+btc2$pct = (btc2$price-btc2$price[1])/btc2$price[1]
+btc2$x = seq(1,nrow(btc2)) 
+btc.gold = bind_rows(gold2,(btc2 %>% select(x,pct,item,date,price)))
+
+
+x.lab = as.numeric(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05"))
+
+ggplot(btc.gold,aes(x,pct))+
+	theme_bw()+
+	geom_line(aes(color=item))+
+	scale_x_continuous("",breaks=as.numeric(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05")), labels=attr(pretty(seq(as.Date("2017-08-05"),as.Date("2017-08-05")+1000,50),n=30) - as.Date("2017-08-05"),"labels"),limits=c(0,1020))+
+	scale_y_continuous("BTC/USD",breaks=predict(lm(pct~price,btc2),data.frame(price=pretty(predict(lm(price~pct,btc2),data.frame(pct=0:16)),n=20))), labels=paste0("$",pretty(predict(lm(price~pct,btc2),data.frame(pct=0:16)),n=20)/1000,"k"))+
+	geom_dl(aes(label = item,color=item), method='last.bumpup', cex = 0.5, hjust = 1)+
+	theme(legend.position="none",
+    		axis.ticks.length=unit(0.25,"cm"),
+    		axis.text.x = element_text(angle = 45, hjust=1,face="bold",size=7),
+    		axis.text.y=element_text(face="bold",size=7)) 
+```
+
+scatterplot of percent change in btc vs gold
+```{r}
+ggplot(data.frame(gold=gold2$pct[8:(nrow(btc2)+7)],bitcoin=btc2$pct,x=1:nrow(btc2)),aes(bitcoin,gold))+geom_point(aes(color=x),alpha=0.6)
+```
+
+
+
+
+best scale for gold vs bitcoin
+```{r}
+cuts = seq(16.2,17.6,0.2)
+shifts = seq(-15,6,3)
+heights = seq(0.4,1,0.2)
+hyper.df = expand.grid(cuts,shifts,heights) 
+colnames(hyper.df) = c("cuts","shifts","heights")
+hyper.df$cor = rep(NA,nrow(hyper.df))
+hyper.df$rss = rep(NA,nrow(hyper.df))
+
+for (j in 1:nrow(hyper.df)){
+sequence = seq(1,max(gold$x),hyper.df$cuts[j])
+gold2 = data.frame(x=rep(NA,length(sequence)),pct=rep(NA,length(sequence)))
+for (i in 1:length(sequence)){
+row = 	which.min(abs(gold$x-sequence[i]))
+gold2$x[i] = gold$x[row]
+gold2$pct[i] = gold$pct[row]
+}
+gold2$item = "Gold"
+gold2$x = seq((134- which.max(gold2$pct[1:500])+hyper.df$shifts[j]),nrow(gold2)+(134- which.max(gold2$pct[1:500])-1)+hyper.df$shifts[j])
+gold2$pct = gold2$pct - hyper.df$heights[j]
+
+diff = gold2 %>% left_join(btc2,by="x") %>% na.omit() 
+hyper.df$rss[j] = sum((diff$pct.x - diff$pct.y)^2)
+hyper.df$cor[j] = cor.test(diff$pct.x,diff$pct.y)$estimate
+}
+```
+
+plot side by side
 ```{r}
 #plot gold
 library(readr)
-
-gold = read_csv("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.csv") %>% as.data.frame()
-gold2 = gold %>% filter(date <= as.Date("2005-05-01") & date >= as.Date("1974-01-01")) %>% mutate(item="Gold")
-btc2 = btc.df %>% filter(date >= as.Date("2017-08-01")) %>% mutate(item="BTC")
+gold = read_excel("~/Desktop/Crypto_Analysis-master/Supplemental/gold.history.xls") %>% as.data.frame()%>% mutate(date=as.Date(date))
+gold2 = gold %>% filter(date <= as.Date("2005-05-01") & date >= as.Date("1970-01-01")) %>% mutate(item="Gold")
+btc2 = btc.df %>% filter(date >= as.Date("2017-06-01")) %>% mutate(item="BTC")
 btc.gold = bind_rows(gold2,btc2)
+
 ggplot(btc.gold, aes(date,price))+
 	geom_line()+
 	theme_bw()+
@@ -79,9 +150,7 @@ ggplot(btc.gold, aes(date,price))+
 	facet_wrap(~item,scales="free")+
 	scale_y_continuous("USD",breaks=c(200,400,600,800,5000,10000,15000,20000),
 		labels=c("$200 (1x)","$400 (2x)","$600 (3x)","$800 (4x)","$5,000 (1x)","$10,000 (2x)","$15,000 (3x)","$20,000 (4x)"))
-
-
-
 #ggplotly(a,tooltip = c("date","price"))
 ```
+
 
